Fixed error display on project create. Fixed overflow issue on index page.

--- a/css/core/layout.css
+++ b/css/core/layout.css
@@ -242,6 +242,10 @@ body > footer {
             padding-left: 20px;
         }
 
+        #overlay form {
+            position: relative;
+        }
+
         #overlay #title {
             width: 420px;
             height: 28px;
@@ -322,6 +326,29 @@ body > footer {
         #overlay label {
             display: none;
         }
+
+            #overlay div.error {
+                height: 36px;
+                padding: 0 0 0 21px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                color: #790e0e;
+                border: 1px solid #97999D;
+                -moz-border-radius: 2px;
+                border-radius: 2px;
+                background: #fff;
+                z-index: 10;
+                font-weight: normal !important;
+                line-height: 38px;
+            }
+
+            #overlay div.error p {
+                height: 100%;
+                line-height: 36px;
+                font-size: 16px;
+                padding-right: 26px;
+            }
 
 /* Ajax Block
 ********************************************************/
